# spring-2026-impact-of-natural-disaster-on-loan-default

./: .gitattributes  .gitignore  Data Source.txt  EDA.ipynb  Early_30_89Days_Deliquency.csv  Late_90plus_Deliquency.csv  README.md  flake.nix  pyproject.toml
