[project]
name = "climatefinance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Core data science (from conda deps)
    "jupyter",
    "ipykernel",
    "matplotlib>=3.8",
    "openpyxl>=3.0",
    "pandas>=2.0",
    "pyarrow",
    "scikit-learn>=1.4",
    "sqlalchemy",
    "xgboost==2.1.4",
    "pmdarima>=2.0",
    "interpret",
    "pandera",
    "missingno",
    "pygam",
    # From pip deps
    "cinemagoer",
    "lxml",
    "pynytimes",
    "pyjokes==0.6.0",
    "plotly==5.24.0",
    "seaborn==0.13.2",
    "ucimlrepo",
]

[tool.uv]
resolution = "highest"
# Override old numba/llvmlite versions that interpret pulls in
override-dependencies = [
    "numba>=0.59.0",
    "llvmlite>=0.42.0",
    "shap>=0.45.0",
]
